--- a/index.html
+++ b/index.html
@@ -4,11 +4,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- Tailwind CSS -->
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
     <title>Dev Board</title>
 </head>
 
-<body>
+<body class="max-w-7xl mx-auto my-4">
 
+    <div class="grid gap-4">
+        <div class="col-span-5 bg-white rounded-lg shadow-md gap-4 py-2 px-4">
+            <nav class="flex justify-between items-center">
+                <div class="flex gap-2 items-center">
+                    <img src="../A5-Dev-Board/assets/logo.png" alt="logo" class="w-5 h-5" />
+                    <h1>Dev<span class="font-bold">Board</span></h1>
+                </div>
+
+                <div class="flex items-center justify-between">
+                    <div class="flex gap-2 items-center bg-gray-100 rounded-2xl px-2">
+                        <img src="../A5-Dev-Board/assets/checkbox.png" alt="checkbox" class="w-3 h-3" />
+                        <span class="font-bold">23</span>
+                    </div>
+                    <div>
+                        <button id="imageButton"
+                            style="background: url('../A5-Dev-Board/assets/theme-btn.png') no-repeat center;  background-size: 50%; width: 50px; height: 50px; border: none; cursor: pointer;">
+                        </button>
+                    </div>
+
+                </div>
+            </nav>
+        </div>
+        <div class=" col-span-4 row-span-4 row-start-2 bg-white rounded-lg shadow-md py-2 px-4">
+
+
+            <div class="grid  gap-4">
+                <div class="content-center bg-gray-100 rounded-lg ">
+                    <div class="flex gap-4 justify-center items-center bg-gray-100 rounded-2xl px-2">
+                        <img src="../A5-Dev-Board/assets/checkbox.png" alt="checkbox" class="w-5 h-5" />
+                        <div>
+                            <h1>Task Assigned</h1>
+                            <span class="font-bold">23</span>
+                        </div>
+
+                    </div>
+                </div>
+                <a href="blog.html" class="col-span-4 bg-blue-400 rounded-lg p-4 cursor-pointer">
+                    <div class="flex justify-center items-center gap-4 ">
+                        <img src="../A5-Dev-Board/assets/board.png" alt="board">
+                        <h1 class="text-3xl font-bold">Discover Something New Today!</h1>
+                    </div>
+                </a>
+                <div class="content-center col-start-6 bg-gray-100 rounded-lg ">
+                    <div class="flex gap-4 justify-center items-center bg-gray-100 rounded-2xl px-2">
+                        <img src="../A5-Dev-Board/assets/calender.png" alt="checkbox" class="w-5 h-5" />
+
+                        <h1 id="today-date">Task Assigned</h1>
+
+
+                    </div>
+                </div>
+                <div class="col-span-6 row-start-2 content-center">
+                    <hr style="border-top: dashed 1px; border-color: darkgray;" />
+                </div>
+                <div class="col-span-2 row-span-2 row-start-3 bg-gray-100 rounded-lg ">5</div>
+                <div class="col-span-2 row-span-2 col-start-3 row-start-3 bg-gray-100 rounded-lg ">
+                    6</div>
+                <div class="col-span-2 row-span-2 col-start-5 row-start-3 bg-gray-100 rounded-lg ">
+                    7</div>
+                <div class="col-span-2 row-span-2 row-start-5 bg-gray-100 rounded-lg ">8</div>
+                <div class="col-span-2 row-span-2 col-start-3 row-start-5 bg-gray-100 rounded-lg ">
+                    9</div>
+                <div class="col-span-2 row-span-2 col-start-5 row-start-5 bg-gray-100 rounded-lg ">
+                    10</div>
+            </div>
+
+
+        </div>
+        <div class="row-span-4 col-start-5 row-start-2 bg-white rounded-lg shadow-md py-2 px-4">3</div>
+    </div>
+
+    <script src="Js/main.js"></script>
 </body>
 
 </html>
