--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
 <body class="max-w-7xl mx-auto my-4">
 
-    <div class="grid gap-4">
-        <div class="col-span-5 bg-white rounded-lg shadow-md gap-4 py-2 px-4">
+
+
+    <div class="grid grid-cols-12  gap-4">
+        <!-- NavBar -->
+        <div class="col-span-12 bg-white rounded-lg shadow-md py-2 px-4">
             <nav class="flex justify-between items-center">
                 <div class="flex gap-2 items-center">
                     <img src="../A5-Dev-Board/assets/logo.png" alt="logo" class="w-5 h-5" />
@@ -24,7 +27,7 @@
                 <div class="flex items-center justify-between">
                     <div class="flex gap-2 items-center bg-gray-100 rounded-2xl px-2">
                         <img src="../A5-Dev-Board/assets/checkbox.png" alt="checkbox" class="w-3 h-3" />
-                        <span class="font-bold">23</span>
+                        <span id="task-completed" class="font-bold">23</span>
                     </div>
                     <div>
                         <button id="imageButton"
@@ -34,55 +37,204 @@
 
                 </div>
             </nav>
+
         </div>
-        <div class=" col-span-4 row-span-4 row-start-2 bg-white rounded-lg shadow-md py-2 px-4">
+        <!-- Task Part -->
+        <div class="col-span-9  row-start-2">
 
-
-            <div class="grid  gap-4">
-                <div class="content-center bg-gray-100 rounded-lg ">
-                    <div class="flex gap-4 justify-center items-center bg-gray-100 rounded-2xl px-2">
+            <div class="grid grid-cols-9 grid-rows-5 gap-4 bg-white rounded-lg shadow-md py-2 px-4">
+                <div class="content-center col-span-2 bg-gray-200 rounded-lg py-2 px-4">
+                    <div class="flex gap-4 justify-center items-center">
                         <img src="../A5-Dev-Board/assets/checkbox.png" alt="checkbox" class="w-5 h-5" />
                         <div>
                             <h1>Task Assigned</h1>
-                            <span class="font-bold">23</span>
+                            <span id="total-task" class="font-bold">0</span>
                         </div>
 
                     </div>
                 </div>
-                <a href="blog.html" class="col-span-4 bg-blue-400 rounded-lg p-4 cursor-pointer">
-                    <div class="flex justify-center items-center gap-4 ">
-                        <img src="../A5-Dev-Board/assets/board.png" alt="board">
-                        <h1 class="text-3xl font-bold">Discover Something New Today!</h1>
-                    </div>
-                </a>
-                <div class="content-center col-start-6 bg-gray-100 rounded-lg ">
-                    <div class="flex gap-4 justify-center items-center bg-gray-100 rounded-2xl px-2">
+                <div class="content-center col-span-5 col-start-3 bg-blue-400 rounded-lg px-8 py-4">
+                    <a href="blog.html" class="cursor-pointer">
+                        <div class="flex justify-center items-center gap-4 ">
+                            <img src="../A5-Dev-Board/assets/board.png" alt="board">
+                            <h1 class="text-3xl font-bold text-color">Discover Something New Today!</h1>
+                        </div>
+                    </a>
+
+                </div>
+                <div class="content-center col-span-2 col-start-8 bg-gray-200 rounded-lg py-2 px-4">
+                    <div class="flex gap-4 justify-center items-center">
                         <img src="../A5-Dev-Board/assets/calender.png" alt="checkbox" class="w-5 h-5" />
 
                         <h1 id="today-date">Task Assigned</h1>
 
-
                     </div>
                 </div>
-                <div class="col-span-6 row-start-2 content-center">
-                    <hr style="border-top: dashed 1px; border-color: darkgray;" />
+                <div
+                    class="task col-span-3 row-span-2 row-start-2 bg-gray-200 rounded-lg py-4 px-4 flex flex-col gap-4">
+                    <h1 class="text-sm bg-white rounded-lg p-2 w-[30%]">
+                        Shop Ease
+                    </h1>
+                    <h1 class="text-md font-bold">
+                        Fix Mobile Button Issue
+                    </h1>
+                    <p class="text-sm bg-white rounded-lg p-2">
+                        A card component has a figure, a body part, and inside body there are title and actions parts.
+                    </p>
+                    <div class="flex justify-between items-center gap-2">
+                        <div>
+                            <h1 class="text-sm">Deadline</h1>
+                            <h1 class="text-sm">21 March 2025</h1>
+                        </div>
+
+                        <div class="">
+                            <button type="submit" id="btn-completed-1"
+                                class="bg-blue-700 text-color rounded-lg px-4 py-2 ">Completed</button>
+                        </div>
+                    </div>
+
+
                 </div>
-                <div class="col-span-2 row-span-2 row-start-3 bg-gray-100 rounded-lg ">5</div>
-                <div class="col-span-2 row-span-2 col-start-3 row-start-3 bg-gray-100 rounded-lg ">
-                    6</div>
-                <div class="col-span-2 row-span-2 col-start-5 row-start-3 bg-gray-100 rounded-lg ">
-                    7</div>
-                <div class="col-span-2 row-span-2 row-start-5 bg-gray-100 rounded-lg ">8</div>
-                <div class="col-span-2 row-span-2 col-start-3 row-start-5 bg-gray-100 rounded-lg ">
-                    9</div>
-                <div class="col-span-2 row-span-2 col-start-5 row-start-5 bg-gray-100 rounded-lg ">
-                    10</div>
+                <div
+                    class="task col-span-3 row-span-2 col-start-4 row-start-2 bg-gray-200 rounded-lg py-4 px-4 flex flex-col gap-4">
+                    <h1 class="text-sm bg-white rounded-lg p-2 w-[30%]">
+                        Shop Ease
+                    </h1>
+                    <h1 class="text-md font-bold">
+                        Fix Mobile Button Issue
+                    </h1>
+                    <p class="text-sm bg-white rounded-lg p-2">
+                        A card component has a figure, a body part, and inside body there are title and actions parts.
+                    </p>
+                    <div class="flex justify-between items-center gap-2">
+                        <div>
+                            <h1 class="text-sm">Deadline</h1>
+                            <h1 class="text-sm">21 March 2025</h1>
+                        </div>
+
+                        <div class="">
+                            <button type="submit" id="btn-completed-2"
+                                class="bg-blue-700 text-color rounded-lg px-4 py-2 ">Completed</button>
+                        </div>
+                    </div>
+                </div>
+                <div
+                    class="task col-span-3 row-span-2 col-start-7 row-start-2 bg-gray-200 rounded-lg py-4 px-4 flex flex-col gap-4">
+                    <h1 class="text-sm bg-white rounded-lg p-2 w-[30%]">
+                        Shop Ease
+                    </h1>
+                    <h1 class="text-md font-bold">
+                        Fix Mobile Button Issue
+                    </h1>
+                    <p class="text-sm bg-white rounded-lg p-2">
+                        A card component has a figure, a body part, and inside body there are title and actions parts.
+                    </p>
+                    <div class="flex justify-between items-center gap-2">
+                        <div>
+                            <h1 class="text-sm">Deadline</h1>
+                            <h1 class="text-sm">21 March 2025</h1>
+                        </div>
+
+                        <div class="">
+                            <button type="submit" id="btn-completed-3"
+                                class="bg-blue-700 text-color rounded-lg px-4 py-2 ">Completed</button>
+                        </div>
+                    </div>
+                </div>
+                <div
+                    class="task col-span-3 row-span-2 row-start-4 bg-gray-200 rounded-lg py-4 px-4 flex flex-col gap-4">
+                    <h1 class="text-sm bg-white rounded-lg p-2 w-[30%]">
+                        Shop Ease
+                    </h1>
+                    <h1 class="text-md font-bold">
+                        Fix Mobile Button Issue
+                    </h1>
+                    <p class="text-sm bg-white rounded-lg p-2">
+                        A card component has a figure, a body part, and inside body there are title and actions parts.
+                    </p>
+                    <div class="flex justify-between items-center gap-2">
+                        <div>
+                            <h1 class="text-sm">Deadline</h1>
+                            <h1 class="text-sm">21 March 2025</h1>
+                        </div>
+
+                        <div class="">
+                            <button type="submit" id="btn-completed-4"
+                                class="bg-blue-700 text-color rounded-lg px-4 py-2 ">Completed</button>
+                        </div>
+                    </div>
+                </div>
+                <div
+                    class="task col-span-3 row-span-2 col-start-4 row-start-4 bg-gray-200 rounded-lg py-4 px-4 flex flex-col gap-4">
+                    <h1 class="text-sm bg-white rounded-lg p-2 w-[30%]">
+                        Shop Ease
+                    </h1>
+                    <h1 class="text-md font-bold">
+                        Fix Mobile Button Issue
+                    </h1>
+                    <p class="text-sm bg-white rounded-lg p-2">
+                        A card component has a figure, a body part, and inside body there are title and actions parts.
+                    </p>
+                    <div class="flex justify-between items-center gap-2">
+                        <div>
+                            <h1 class="text-sm">Deadline</h1>
+                            <h1 class="text-sm">21 March 2025</h1>
+                        </div>
+
+                        <div class="">
+                            <button type="submit" id="btn-completed-5"
+                                class="bg-blue-700 text-color rounded-lg px-4 py-2 ">Completed</button>
+                        </div>
+                    </div>
+                </div>
+                <div
+                    class="task col-span-3 row-span-2 col-start-7 row-start-4 bg-gray-200 rounded-lg py-4 px-4 flex flex-col gap-4">
+                    <h1 class="text-sm bg-white rounded-lg p-2 w-[30%]">
+                        Shop Ease
+                    </h1>
+                    <h1 class="text-md font-bold">
+                        Fix Mobile Button Issue
+                    </h1>
+                    <p class="text-sm bg-white rounded-lg p-2">
+                        A card component has a figure, a body part, and inside body there are title and actions parts.
+                    </p>
+                    <div class="flex justify-between items-center gap-2">
+                        <div>
+                            <h1 class="text-sm">Deadline</h1>
+                            <h1 class="text-sm">21 March 2025</h1>
+                        </div>
+
+                        <div class="">
+                            <button type="submit" id="btn-completed-6"
+                                class="bg-blue-700 text-color rounded-lg px-4 py-2 ">Completed</button>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+        </div>
+        <!-- Activity Part -->
+        <div class="col-span-3  col-start-10 row-start-2 bg-white rounded-lg shadow-md py-2 px-4">
+            <div class="p-8 flex flex-col gap-4 justify-center">
+                <div class="flex justify-center items-center gap-2">
+                    <img src="../A5-Dev-Board/assets/activity.png" alt="activity" srcset="">
+                    <h1>Activity Log</h1>
+                </div>
+                <div class="flex justify-center items-center gap-2">
+                    <button type="submit" id="btn-clear"
+                        class="bg-blue-700 text-color rounded-lg px-2 py-2 w-[60%]">Clear
+                        History</button>
+                </div>
+
+            </div>
+            <hr style="border-top: dashed 1px; border-color: darkgray;" class="w-full" />
+
 
 
         </div>
-        <div class="row-span-4 col-start-5 row-start-2 bg-white rounded-lg shadow-md py-2 px-4">3</div>
     </div>
+
+
 
     <script src="Js/main.js"></script>
 </body>
