--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                     </div>
                 </div>
-                <div class="content-center col-span-5 col-start-3 bg-blue-400 rounded-lg px-8 py-4">
+                <div class="content-center col-span-5 col-start-3 bg-color rounded-lg px-8 py-4">
                     <a href="blog.html" class="cursor-pointer">
                         <div class="flex justify-center items-center gap-4 ">
                             <img src="../A5-Dev-Board/assets/board.png" alt="board">
@@ -89,7 +89,7 @@
 
                         <div class="">
                             <button type="submit" id="btn-completed-1"
-                                class="bg-blue-700 text-color rounded-lg px-4 py-2 ">Completed</button>
+                                class="btn-bg text-color rounded-lg px-4 py-2 hover:opacity-60 ">Completed</button>
                         </div>
                     </div>
 
@@ -98,10 +98,10 @@
                 <div
                     class="task col-span-3 row-span-2 col-start-4 row-start-2 bg-gray-200 rounded-lg py-4 px-4 flex flex-col gap-4">
                     <h1 class="text-sm bg-white rounded-lg p-2 w-[30%]">
-                        Shop Ease
+                        CloudSync
                     </h1>
                     <h1 class="text-md font-bold">
-                        Fix Mobile Button Issue
+                        Add Dark Mode
                     </h1>
                     <p class="text-sm bg-white rounded-lg p-2">
                         A card component has a figure, a body part, and inside body there are title and actions parts.
@@ -114,17 +114,17 @@
 
                         <div class="">
                             <button type="submit" id="btn-completed-2"
-                                class="bg-blue-700 text-color rounded-lg px-4 py-2 ">Completed</button>
+                                class="btn-bg text-color rounded-lg px-4 py-2 hover:opacity-60 ">Completed</button>
                         </div>
                     </div>
                 </div>
                 <div
                     class="task col-span-3 row-span-2 col-start-7 row-start-2 bg-gray-200 rounded-lg py-4 px-4 flex flex-col gap-4">
                     <h1 class="text-sm bg-white rounded-lg p-2 w-[30%]">
-                        Shop Ease
+                        SwiftPay
                     </h1>
                     <h1 class="text-md font-bold">
-                        Fix Mobile Button Issue
+                        Optimize Home page 
                     </h1>
                     <p class="text-sm bg-white rounded-lg p-2">
                         A card component has a figure, a body part, and inside body there are title and actions parts.
@@ -137,17 +137,17 @@
 
                         <div class="">
                             <button type="submit" id="btn-completed-3"
-                                class="bg-blue-700 text-color rounded-lg px-4 py-2 ">Completed</button>
+                                class="btn-bg text-color rounded-lg px-4 py-2 hover:opacity-60 ">Completed</button>
                         </div>
                     </div>
                 </div>
                 <div
                     class="task col-span-3 row-span-2 row-start-4 bg-gray-200 rounded-lg py-4 px-4 flex flex-col gap-4">
                     <h1 class="text-sm bg-white rounded-lg p-2 w-[30%]">
-                        Shop Ease
+                        Meta
                     </h1>
                     <h1 class="text-md font-bold">
-                        Fix Mobile Button Issue
+                        Add new emoji 🤲
                     </h1>
                     <p class="text-sm bg-white rounded-lg p-2">
                         A card component has a figure, a body part, and inside body there are title and actions parts.
@@ -160,17 +160,17 @@
 
                         <div class="">
                             <button type="submit" id="btn-completed-4"
-                                class="bg-blue-700 text-color rounded-lg px-4 py-2 ">Completed</button>
+                                class="btn-bg text-color rounded-lg px-4 py-2 hover:opacity-60 ">Completed</button>
                         </div>
                     </div>
                 </div>
                 <div
                     class="task col-span-3 row-span-2 col-start-4 row-start-4 bg-gray-200 rounded-lg py-4 px-4 flex flex-col gap-4">
                     <h1 class="text-sm bg-white rounded-lg p-2 w-[30%]">
-                        Shop Ease
+                        Google LLC
                     </h1>
                     <h1 class="text-md font-bold">
-                        Fix Mobile Button Issue
+                        Integrate OpenAI API
                     </h1>
                     <p class="text-sm bg-white rounded-lg p-2">
                         A card component has a figure, a body part, and inside body there are title and actions parts.
@@ -183,17 +183,17 @@
 
                         <div class="">
                             <button type="submit" id="btn-completed-5"
-                                class="bg-blue-700 text-color rounded-lg px-4 py-2 ">Completed</button>
+                                class="btn-bg text-color rounded-lg px-4 py-2 hover:opacity-60 ">Completed</button>
                         </div>
                     </div>
                 </div>
                 <div
                     class="task col-span-3 row-span-2 col-start-7 row-start-4 bg-gray-200 rounded-lg py-4 px-4 flex flex-col gap-4">
                     <h1 class="text-sm bg-white rounded-lg p-2 w-[30%]">
-                        Shop Ease
+                        Glassdoor
                     </h1>
                     <h1 class="text-md font-bold">
-                        Fix Mobile Button Issue
+                        Improve Job searching
                     </h1>
                     <p class="text-sm bg-white rounded-lg p-2">
                         A card component has a figure, a body part, and inside body there are title and actions parts.
@@ -206,7 +206,7 @@
 
                         <div class="">
                             <button type="submit" id="btn-completed-6"
-                                class="bg-blue-700 text-color rounded-lg px-4 py-2 ">Completed</button>
+                                class="btn-bg text-color rounded-lg px-4 py-2 hover:opacity-60">Completed</button>
                         </div>
                     </div>
                 </div>
@@ -221,8 +221,7 @@
                     <h1>Activity Log</h1>
                 </div>
                 <div class="flex justify-center items-center gap-2">
-                    <button type="submit" id="btn-clear"
-                        class="bg-blue-700 text-color rounded-lg px-2 py-2 w-[60%]">Clear
+                    <button type="submit" id="btn-clear" class="btn-bg text-color rounded-lg px-2 py-2 w-[60%]">Clear
                         History</button>
                 </div>
 
@@ -230,7 +229,9 @@
             <hr style="border-top: dashed 1px; border-color: darkgray;" class="w-full" />
 
 
+            <div id="finished-tasks" class="flex flex-col gap-4 justify-center items-center mt-4">
 
+            </div>
         </div>
     </div>
 
